Fixes bug 311240.  We were crashing in layout when a new bookmark was added. The real problem here is that RDF is overloading the HTML stream converter to get at the META tags.  I have a hacky fix to layout that checks for the special RDF slave context type and does not layout any tag other than META and HEAD. This will get backed out as soon as we come up with a better solution...